formater og optimiser imports på hele fp-uttak